// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action-text prop 1`] = `
<div class="win-search win-search--show-action">
  <div class="win-search__content win-search__content--square">
    <div class="win-cell win-cell--borderless win-field">
      <div class="win-field__left-icon"><i class="win-icon win-icon-search">
          <!----></i></div>
      <div class="win-cell__value win-cell__value--alone win-field__value">
        <div class="win-field__body"><input type="search" class="win-field__control"></div>
      </div>
    </div>
  </div>
  <div role="button" tabindex="0" class="win-search__action">Custom Text</div>
</div>
`;

exports[`label slot 1`] = `
<div class="win-search">
  <div class="win-search__content win-search__content--square">
    <div class="win-search__label">Custom Label</div>
    <div class="win-cell win-cell--borderless win-field">
      <div class="win-field__left-icon"><i class="win-icon win-icon-search">
          <!----></i></div>
      <div class="win-cell__value win-cell__value--alone win-field__value">
        <div class="win-field__body"><input type="search" class="win-field__control"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`left slot 1`] = `
<div class="win-search">Custom Left Content<div class="win-search__content win-search__content--square">
    <div class="win-cell win-cell--borderless win-field">
      <div class="win-field__left-icon"><i class="win-icon win-icon-search">
          <!----></i></div>
      <div class="win-cell__value win-cell__value--alone win-field__value">
        <div class="win-field__body"><input type="search" class="win-field__control"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`left-icon prop 1`] = `
<div class="win-search">
  <div class="win-search__content win-search__content--square">
    <div class="win-cell win-cell--borderless win-field">
      <div class="win-field__left-icon"><i class="win-icon win-icon-setting-o">
          <!----></i></div>
      <div class="win-cell__value win-cell__value--alone win-field__value">
        <div class="win-field__body"><input type="search" class="win-field__control"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`right-icon prop 1`] = `
<div class="win-search">
  <div class="win-search__content win-search__content--square">
    <div class="win-cell win-cell--borderless win-field">
      <div class="win-field__left-icon"><i class="win-icon win-icon-search">
          <!----></i></div>
      <div class="win-cell__value win-cell__value--alone win-field__value">
        <div class="win-field__body"><input type="search" class="win-field__control">
          <div class="win-field__right-icon"><i class="win-icon win-icon-setting-o">
              <!----></i></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`right-icon slot 1`] = `
<div class="win-search">
  <div class="win-search__content win-search__content--square">
    <div class="win-cell win-cell--borderless win-field">
      <div class="win-field__left-icon"><i class="win-icon win-icon-search">
          <!----></i></div>
      <div class="win-cell__value win-cell__value--alone win-field__value">
        <div class="win-field__body"><input type="search" class="win-field__control">
          <div class="win-field__right-icon">Custom Right Icon</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
